@@ -56,6 +56,8 @@ typedef struct symbol {
 #define SYMF_PRIVATE  0x02  /* symbol should not be used from other modules */
 #define SYMF_INTERNAL 0x04  /* symbol is created by flexspin itself, should not be shown in listings */
 
+#define SYMF_INITED   0x100 /* symbol was initialized */
+
 #define INTVAL(sym) ((intptr_t)((sym)->val))
 
 
