@@ -2,6 +2,7 @@ Version 5.4.4
 - Added warning for modifying ptra in inline assembly
 - Fixed a problem with large ranges in lookup/lookdown
 - Fixed a preprocessor bug which sometimes caused failure to recognize comments
+- If -Wall is given, warn about uninitialized local variables
 
 Version 5.4.3
 - Clear all errors on successful open
